--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-﻿version: '3.8'
+version: '3.8'
 services:
   db:
     image: postgres:15
@@ -10,3 +10,25 @@ services:
       - "5432:5432"
     volumes:
       - ./db/data:/var/lib/postgresql/data
+
+  api:
+    image: node:18
+    working_dir: /usr/src/app
+    volumes:
+      - ./backend:/usr/src/app
+    command: sh -c "npm install --silent && npm start"
+    ports:
+      - "4000:4000"
+    depends_on:
+      - db
+
+  frontend:
+    image: node:18
+    working_dir: /usr/src/app
+    volumes:
+      - ./frontend:/usr/src/app
+    command: sh -c "npm install --silent && npm run dev"
+    ports:
+      - "3000:3000"
+    depends_on:
+      - api
