--- a/backend/package.json
+++ b/backend/package.json
@@ -4,14 +4,17 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "prisma generate && prisma migrate deploy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "express": "^5.1.0"
+    "@prisma/client": "^6.12.0",
+    "express": "^5.1.0",
+    "prisma": "^6.12.0"
   },
   "devDependencies": {
     "jest": "^30.0.5",
