--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://ourglass:password@localhost:5432/ourglassdb"
+DATABASE_URL=postgresql://ourglass:password@db:5432/ourglassdb
