--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,1 +1,2 @@
-DATABASE_URL=postgresql://ourglass:password@db:5432/ourglassdb
+DATABASE_PROVIDER=postgresql
+DATABASE_URL=postgresql://postgres:password@localhost:5432/ourglass
