--- a/backend/package.json
+++ b/backend/package.json
@@ -15,7 +15,10 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "bcrypt": "^5.1.1",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^6.12.0"
   },
   "devDependencies": {
