Add sponsorship auction feature

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
-DATABASE_PROVIDER=postgresql
-DATABASE_URL=postgresql://postgres:password@localhost:5432/ourglass
+DATABASE_PROVIDER=sqlite
+DATABASE_URL=file:./dev.db
 JWT_SECRET=supersecretkey
 PORT=3000
